--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,21 +2,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  max-width: 1000px;
 }
 
 nav {
+  display: flex;
   background-color: steelblue;
-  padding: 10px;
+  padding: 1rem;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 nav a {
   color: white;
   display: block;
-  padding: 20px;
+  padding: 0.5rem;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 1.2rem;
 }
 
 h1 {
   color: steelblue;
+  border-bottom: 1px solid steelblue;
+  padding: .5rem;
 }
 
 main img {
@@ -29,17 +38,25 @@ main img {
 }
 
 p {
-  padding: 0;
+  padding: .5rem;
+}
+
+.grid {
+  display: grid;
+  align-items: center;
 }
 
 main {
-  width: 840px;
+ grid-column: 2/3;
+ margin: 1rem;
 }
 
 aside {
   position: relative;
   width: 20rem;
   text-align: center;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 aside img {
@@ -53,13 +70,12 @@ aside h2 {
   left: 130px;
 }
 
-footer {
+header, .grid, footer {
+  max-width: 1000px;
+  margin: 0 auto;
   margin-top: 15px;
   border-top: 1px solid #000;
-  text-align: center;
 }
-
-/* Class Selectors */
 
 .box {
   margin: 1rem;
