--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  max-width: 1000px;
+  max-width: 840px;
 }
 
 nav {
@@ -70,8 +70,8 @@ aside h2 {
   left: 130px;
 }
 
-header, .grid, footer {
-  max-width: 1000px;
+header, footer, .grid {
+  max-width: 840px;
   margin: 0 auto;
   margin-top: 15px;
   border-top: 1px solid #000;
