--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -16,7 +16,8 @@
 }
 
 body {
-  width: 1500px;
+  min-width: 1000px;
+  max-width: 100%;
   margin: 0 auto;
   border-right: 1px solid var(--primary-color);
   border-left: 1px solid var(--primary-color);
