--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -172,6 +172,7 @@ h3 {
   width: 500px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  text-align-last: center;
 }
 
 .card img {
@@ -188,23 +189,27 @@ h3 {
   height: 250px;
 }
 
+h5 {
+  font-size: 1rem;
+  font-weight: normal;
+  margin: 15px;
+}
 .card:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
-.container {
-  
+.container {  
   width: 100%;
   text-align: center;
 }
 
 .container h4 {
   font-size: 2rem;
-  margin-top: auto;
+  margin: 10px;
 }
 
 .grid-display {
-  padding: 50px;
+  padding: 30px;
   display: flex;
   justify-content: space-around; 
 }
@@ -218,7 +223,6 @@ h3 {
 }
 
 .form-container {
-  /* border: 1px solid blue; */
   width: 45%;
   padding: 10px;
 }
@@ -278,6 +282,20 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+button[type="button"] {
+  background-color: var(--accent1-color);
+  color: var(--secondary-color);
+  padding: .5rem;
+  text-decoration: none;  
+  border-radius: 4px;
+  border: 1px solid var(--accent1-color);
+  margin-bottom: 10px;
+}
+
+button[type="book-now"]:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
