--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -28,7 +28,7 @@ header {
   display: grid;
   align-items: center;
   justify-content: space-around;
-  padding: 1rem;
+  /* padding: 1rem; */
 }
 
 nav {
@@ -52,7 +52,7 @@ nav {
 }
 
 header img {
-  width: 150px;
+  width: 100px;
   height: auto;
   position: relative;
   grid-column: 1/2;
@@ -65,6 +65,7 @@ header img {
 
 .hero img {
   width: 100%;
+  max-height: 400px;
 }
 
 .hero article img {
@@ -79,8 +80,10 @@ article {
   left: 0;
   right: 0;
   margin: 0 auto;
-  background-color: rgba(253, 253, 253, 0.285);
+  background-color: rgba(255, 255, 255, 0.412);
   padding: .5rem;
+  justify-content: center;
+  display: flex;
 }
 
 p {
@@ -88,13 +91,31 @@ p {
   text-align: center;
 }
 
-h1 {
+.hero h1 {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   text-align: center;
   font-size: 4rem;
+  background-color: rgba(255, 255, 255, 0.435);
+}
+
+h1 {
+  top: 0;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.subtitle h1 {
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  font-size:2.5rem;
 }
 
 h2 {
@@ -134,7 +155,6 @@ footer {
   background-color: var(--primary-color);
   display: grid;
   align-items: center;
-  padding: .5rem;
 }
 
 .sociallinks {
@@ -214,16 +234,38 @@ h5 {
   justify-content: space-around; 
 }
 
+.container-signup {
+  text-align: -webkit-center;
+  padding: 15px;
+}
+
+
 .contact-container {
   flex-wrap: wrap;
   justify-content: space-around;
   display: flex;
   align-items: center;
-  height: 80vh;
+  height: 50vh;
+  width: 90%;
+  border: 1px solid #c0c0c0;
+  border-radius: 25px;
+  text-align: initial;
+}
+
+.contact-container2 {
+  flex-wrap: wrap;
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+  height:75vh;
+  width: 95%;
+  border: 1px solid #c0c0c0;
+  border-radius: 25px;
+  text-align: initial;
 }
 
 .form-container {
-  width: 45%;
+  width: 40%;
   padding: 10px;
 }
 
@@ -264,6 +306,7 @@ h5 {
 .form-group-checkbox {
   display: block;
   font-weight: bold;
+  padding-bottom: 20px;
 }
 
 .form {
@@ -300,13 +343,26 @@ button[type="book-now"]:hover {
 }
 
 .image-container {
-  width: 45%;
+  width: 35%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container2 {
+  width: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .image-container img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+.image-container2 img {
   max-width: 100%;
   height: auto;
   border-radius: 5px;
